--- a/idex.html
+++ b/idex.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>MY first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem eligendi necessitatibus consequuntur ducimus! Quia quae, hic eveniet, sapiente mollitia error nulla ipsum consequuntur vel aperiam quisquam magni vero nemo? Sed!</p>
+    </div>
 </body>
 </html>
