added a list push code

--- a/idex.html
+++ b/idex.html
@@ -17,6 +17,15 @@
 
         <h3>MY Third website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem eligendi necessitatibus consequuntur ducimus! Quia quae, hic eveniet, sapiente mollitia error nulla ipsum consequuntur vel aperiam quisquam magni vero nemo? Sed!</p>
+        <div>
+            <h3>how to push code</h3>
+            <ul>
+                <li>git add</li>
+                <li>git commit -m"add a meaningful commit massage"  </li>
+                <li>git push</li>
+                
+            </ul>
+        </div>
     </div>
 </body>
 </html>
